2010-11-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* doctools.man: Bumped to version 1.4.11, fixing issues with
	* doctools.tcl: resolution of relative include paths. -file had
	* pkgIndex.tcl: overloaded semantics, used for both source paths
	  (include resolution) and destination paths (HTML relative
	  links). Added new option -ibase as primary for include
	  resolution, using -file only as fallback anymore.

2010-09-15  Andreas Kupries  <andreask@activestate.com>

	* tests/nroff/04: [Bug 3058654] and last entry. Updated
	* tests/nroff/08: the affected testcases.

2010-09-07  Andreas Kupries  <andreask@activestate.com>

	* mpformats/fmt.nroff: [Bug 3058654]: Changed formatting of
	* mpformats/_nroff.tcl: examples to .CS/.CE.

2010-09-07  Andreas Kupries  <andreask@activestate.com>

	* mpformats/fmt.nroff: [Bug 3058654]: Added code compacting
	whitespace in various strings used for nroff comments and NAME
	section.

2010-07-06  Andreas Kupries  <andreask@activestate.com>

	* checker.tcl: [RFE 2915921] Accepted the RFE, adding
	* mpformats/fmt.wiki: commands to portably write em- and
	* mpformats/fmt.text: en-dashes. Bumped version to 1.4.10.
	* mpformats/fmt.latex:
	* mpformats/fmt.tmml:
	* mpformats/fmt.html:
	* mpformats/fmt.nroff:
	* mpformats/fmt.null:
	* doctools.man: 
	* pkgIndex.tcl:
	* doctools.tcl:

2010-06-17  Andreas Kupries  <andreask@activestate.com>

	* mpformats/fmt.html: Tweaked formatting of images when no
	* mpformats/fmt.latex: data was found. Especially for HTML
	* mpformats/fmt.text: accept http and ftp uris and format
	* mpformats/fmt.wiki: them as links, allowing the embedding
	* mpformats/fmt.nroff: of images without requiring a local
	* doctools.man: file. Bumped version to 1.4.9
	* pkgIndex.tcl:
	* doctools.tcl:

2010-06-10  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* doctools.tcl: Extended the plugin API to the image map to
	* mpformats/fmt.nroff: allow querying the image data instead of